# dataforge-analytics

./: .gitignore  FINAL_SUMMARY.md  GITHUB_FINAL_STATUS.txt  HOW_TO_RUN.md  Makefile  PRESENTATION.md  QUICK_START.md  README.md  README_COMPREHENSIVE.md  SCREENSHOTS.md  START_HERE.md  VERIFICATION_REPORT.md  capture_screenshots.py  generate_large_data.py  live_data_streamer_optimized.py  pyproject.toml  requirements.txt  setup_database.py  test_dashboard_after_changes.py  test_enhanced_streamer.py  verify_dashboard_metrics.py  verify_realtime.py
.github/workflows/: dbt_ci.yml
dashboard/: app_professional.py  app_simple.py
dataforge/: dbt_project.yml  profiles.yml
dataforge/macros/: date_spine.sql  generate_surrogate_key.sql  get_column_values.sql  safe_divide.sql
dataforge/macros/custom_materializations/: insert_overwrite.sql
dataforge/models/: sources.yml
dataforge/models/marts/core/: mart_customer_360.sql  mart_product_analytics.sql  mart_revenue_analytics.sql
dataforge/models/marts/finance/: mart_cohort_analysis.sql  mart_rfm_segmentation.sql
dataforge/models/marts/marketing/: mart_attribution.sql  mart_funnel_analytics.sql
dataforge/models/staging/: _staging.yml  stg_campaigns.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_web_events.sql
dataforge/semantic_models/: customer_semantic.yml  marketing_semantic.yml  revenue_semantic.yml
dataforge/snapshots/: customer_snapshot.sql  product_pricing_snapshot.sql
dataforge/tests/: assert_no_orphan_orders.sql  assert_revenue_reconciles.sql
